IceCreamShop/force-app/main/default/objects/Ingredient__c/Ingredient__c.object-meta.xml
<CustomObject>
    <label>Ingredient</label>
    <nameField>
        <displayFormat>ICN-{0}</displayFormat>
        <label>Ice Cream Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ingredients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>