IceCreamShop/force-app/main/default/objects/Ingredient__c/fields/Allergy__c.field-meta.xml
<CustomField>
    <fullName>Allergy__c</fullName>
    <label>Allergy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Milk</fullName>
            </value>
            <value>
                <fullName>Gluten</fullName>
            </value>
            <value>
                <fullName>Tree Nuts</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>