IceCreamShop/force-app/main/default/objects/Ingredient__c/fields/Calories__c.field-meta.xml
<CustomField>
    <fullName>Calories__c</fullName>
    <label>Calories</label>
    <length>4</length>
    <type>Text</type>
</CustomField>