IceCreamShop/force-app/main/default/objects/Ingredient__c/fields/Carbs_g__c.field-meta.xml
<CustomField>
    <fullName>Carbs_g__c</fullName>
    <label>Carbs(g)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>