IceCreamShop/force-app/main/default/objects/Ingredient__c/fields/Cholesterol_mg__c.field-meta.xml
<CustomField>
    <fullName>Cholesterol_mg__c</fullName>
    <label>Cholesterol(mg)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>