IceCreamShop/force-app/main/default/objects/Ingredient__c/fields/Fat_g__c.field-meta.xml
<CustomField>
    <fullName>Fat_g__c</fullName>
    <label>Fat(g)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>