IceCreamShop/force-app/main/default/objects/Ingredient__c/fields/Ice_Cream_Flavor__c.field-meta.xml
<CustomField>
    <fullName>Ice_Cream_Flavor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ice Cream Flavor</label>
    <referenceTo>Ice_Cream_Flavor__c</referenceTo>
    <relationshipLabel>Ingredients</relationshipLabel>
    <relationshipName>Ingredients</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>