IceCreamShop/force-app/main/default/objects/Ingredient__c/fields/Pick_Ingredients__c.field-meta.xml
<CustomField>
    <fullName>Pick_Ingredients__c</fullName>
    <label>Pick Ingredients</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Blueberrys</fullName>
            </value>
            <value>
                <fullName>Cookie Dough</fullName>
            </value>
            <value>
                <fullName>Cream</fullName>
            </value>
            <value>
                <fullName>Flavoring</fullName>
            </value>
            <value>
                <fullName>Ice</fullName>
            </value>
            <value>
                <fullName>Milk</fullName>
            </value>
            <value>
                <fullName>Splenda</fullName>
            </value>
            <value>
                <fullName>Strawberries</fullName>
            </value>
            <value>
                <fullName>Sugar</fullName>
            </value>
            <value>
                <fullName>Vanilla</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>