IceCreamShop/force-app/main/default/objects/Ingredient__c/fields/Protein_g__c.field-meta.xml
<CustomField>
    <fullName>Protein_g__c</fullName>
    <label>Protein(g)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>