IceCreamShop/force-app/main/default/objects/Ingredient__c/fields/Sugars_g__c.field-meta.xml
<CustomField>
    <fullName>Sugars_g__c</fullName>
    <label>Sugars(g)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>