IceCreamShop/force-app/main/default/objects/Ingredient__c/fields/TestField__c.field-meta.xml
<CustomField>
    <fullName>TestField__c</fullName>
    <label>TestField</label>
    <length>100</length>
    <type>Text</type>
</CustomField>